review details updated

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
             rel="stylesheet"
         />
 
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
+
         <title>Movie Review</title>
     </head>
     <body>
