--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="shortcut icon" href="./favicon.ico" />
         <meta
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         />
         <meta name="theme-color" content="#000000" />
+        <meta name="description" content="Review the movie you watched" />
 
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <link rel="manifest" href="./manifest.json" />
 
         <!--Import Google Icon Font-->
         <link
@@ -56,5 +57,20 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="root"></div>
+
+        <script>
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", () => {
+                    navigator.serviceWorker
+                        .register("./serviceworker.js")
+                        .then((reg) => {
+                            console.log("Serviceworker Success", reg.scope);
+                        })
+                        .catch((err) => {
+                            console.log("Serviceworker Failure", err);
+                        });
+                });
+            }
+        </script>
     </body>
 </html>
